kubernetes/apps/prometheus/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: app
spec:
  serviceName: headless
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      securityContext:
        fsGroup: 65534 # USER nobody
      containers:
        - name: prometheus
          image: prom/prometheus:v3.9.1
          ports:
            - name: prometheus
              containerPort: 9090
          # https://prometheus.io/docs/prometheus/latest/management_api/
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9090
          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9090
          volumeMounts:
            - name: data
              mountPath: /prometheus
            - name: config
              mountPath: /etc/prometheus
      volumes:
        - name: config
          configMap:
            name: app-config
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
