kubernetes/apps/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headless
spec:
  clusterIP: None
  selector:
    app: prometheus
  ports:
    - name: http
      port: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: svc
  annotations:
    external-dns.alpha.kubernetes.io/hostname: prometheus.home.arpa
spec:
  selector:
    app: prometheus
  type: LoadBalancer
  ports:
    - name: http
      port: 9090
